--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   build:
+    name: Build and Release
     runs-on: windows-latest
+    permissions: write-all
 
     steps:
       - name: Checkout code
